(+semver: feature) Switch to Plausible

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -96,20 +96,16 @@
     src="{{ site.baseurl }}/assets/uswds/js/uswds-init.min.js"
   ></script>
 
-  {% if jekyll.environment == 'production' %}
-  <!-- Google tag (gtag.js) -->
   <script
-    async
-    src="https://www.googletagmanager.com/gtag/js?id=UA-107520153-1"
+    defer
+    data-domain="trnzt.com"
+    src="https://plausible.io/js/script.outbound-links.js"
   ></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "UA-107520153-1", { anonymize_ip: true });
+    window.plausible =
+      window.plausible ||
+      function () {
+        (window.plausible.q = window.plausible.q || []).push(arguments);
+      };
   </script>
-  {% endif %}
 </head>
