(+semver: minor) Update references for Codeberg, etc.

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -46,11 +46,11 @@
         <div class="usa-footer__contact-links mobile-lg:grid-col-6">
           <div class="usa-footer__social-links grid-row grid-gap-1">
             <div class="grid-col-auto">
-              <a class="usa-social-link" href="https://github.com/trnzt"
+              <a class="usa-social-link" href="https://codeberg.org/trnzt"
                 ><img
                   class="usa-social-link__icon"
-                  src="/assets/uswds/img/usa-icons/github.svg"
-                  alt="GitHub"
+                  src="/assets/img/codeberg.svg"
+                  alt="Codeberg"
               /></a>
             </div>
             <div class="grid-col-auto">
